--- a/style.css
+++ b/style.css
@@ -54,5 +54,5 @@ height: 200px;
 
 .categoria-videos img:hover{
     opacity: 1.0;
-    border: 1px solid greenyellow;
+    border: 1px solid green;
 }
