--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@ body {
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
-header{
-    border-bottom: solid 2px  rgb(42, 122, 228);
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
-    font-size: 32px ;
+    font-size: 32px;
     color: rgb(42, 122, 228);
 }
 
@@ -28,31 +29,32 @@ h1 {
     font-size: 40px;
 }
 
-p{
+p {
     font-size: 20xp;
 }
 
-img{
-    height: 200px;
-}
-
-.categoria-videos{
+.categoria-videos {
     display: flex;
     overflow-X: auto;
     gap: 10px;
 }
 
 .categoria {
-padding-left: 20px;
-padding-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
 }
 
-.categoria-videos img{
+.categoria-videos img {
     opacity: 0.5;
-height: 200px;
+    height: 200px;
 }
 
-.categoria-videos img:hover{
+.categoria-videos img:hover {
     opacity: 1.0;
     border: 1px solid green;
+}
+
+.categoria h2{
+    color: rgb(42, 122, 228)
 }
