--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ h1 {
 }
 
 p {
-    font-size: 20xp;
+    font-size: 20px;
 }
 
 .categoria-videos {
     display: flex;
-    overflow-X: auto;
+    overflow-x: auto;
     gap: 10px;
 }
 
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 1px solid green;
+    border: 3px solid green;
 }
 
-.categoria h2{
-    color: rgb(42, 122, 228)
+.categoria h2 {
+    color: rgb(42, 122, 228);
 }
